<?xml version="1.0"?>
<package format="2">
  <name>crsf_drv</name>
  <version>0.0.0</version>
  <description>The crsf_drv package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alessio@todo.todo">alessio</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rostest</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <buildtool_depend>catkin_virtualenv</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>